# twitter-django

client/src/components/NavBar/: NavBar.jsx
client/src/components/SignupForm/: SignupForm.jsx
client/src/hooks/: useUser.js
client/src/pages/App/: index.js
client/src/pages/HomePage/: index.js
client/src/pages/LoginPage/: LoginPage.jsx
client/src/utils/: tokenService.js  userService.js
server/: build.sh  fly.toml  manage.py  plan.md  pyproject.toml  render.yaml  requirements.txt
server/main_app/: admin.py  authentication.py  models.py  serializers.py  urls.py  views.py
server/main_app/migrations/: 0001_initial.py  0002_comment.py
server/twitter_django/: asgi.py  settings.py  urls.py  wsgi.py
